[package]
name = "eng-units"
version = "0.1.2"
edition = "2021"
description = "Rust library to build, calculate and convert custom engineering units."
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/fjpereny/eng-units"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
