[package]
name = "eng-units"
authors = ["Frank Pereny"]
version = "0.1.11"
edition = "2021"
readme = "README.md"
description = "Engineering unit coversions and calculations."
repository = "https://github.com/fjpereny/eng-units"
license = "GPL-3.0"
keywords = ["engineering", "calculations", "units", "conversion", "measurement"]
categories = ["science", "mathematics", "data-structures", "aerospace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
